kubernetes/services/base/ingress-edge-server-ngrok.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: edge-ngrok
  annotations:
    certmanager.k8s.io/issuer: "letsencrypt-issuer-staging"
spec:
  tls:
  - hosts:
    - 4727-186-250-167-21.sa.ngrok.io
    secretName: tls-ngrok-letsencrypt-certificate
  rules:
  - host: 4727-186-250-167-21.sa.ngrok.io
    http:
      paths:
      - path: /oauth
        backend:
          serviceName: auth-server
          servicePort: 80
      - path: /product-composite
        backend:
          serviceName: product-composite
          servicePort: 80        
      - path: /actuator/health
        backend:
          serviceName: product-composite
          servicePort: 80
